--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   shared_preferences: ^2.2.2
   provider: ^6.1.1
   intl: ^0.18.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
