--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
     path: ../gossip
   gossip_typed_events:
     path: ../gossip_typed_events
+  gossip_event_sourcing:
+    path: ../gossip_event_sourcing
   nearby_connections: ^4.3.0
   permission_handler: ^11.3.1
   location: ^5.0.3
